8184672: [ppc64] The fix for '8174749: Use hash table/oops for MemberName table' is broken on ppc64

Reviewed-by: coleenp, goetz